Attempt to Fix spacing for about section text

--- a/CSS/aboutpage.css
+++ b/CSS/aboutpage.css
@@ -88,6 +88,8 @@ body{
 }
 
 .about-info-section-part-1, .about-info-section-part-3 {
+    padding-left:30px;
+    padding-right:30px;
     padding-bottom:20px;
     margin-bottom:10;
     display: flex;
@@ -95,6 +97,8 @@ body{
 }
 
 .about-info-section-part-2 {
+    padding-left:30px;
+    padding-right:30px;
     padding-top:10;
     margin-top:10;
     display: flex;
@@ -130,14 +134,14 @@ body{
     font-family: 'Helvetica', Arial, sans-serif;
     font-size: 1.15rem;
     color: #fff;
-    line-height: 1.6; /* Adds breathing room between individual sentences */
+    line-height: 1.6;
     font-weight: 300;
     text-align: justify;
 }
 
 /* Right Column Image Box Formatting */
 .about-image-column {
-    flex: 1; /* Automatically shares space equally */
+    flex: 1; 
     display: flex;
     justify-content: center;
 }
